Archive2/a6/1620a031f184a4/output
main.cpp: In function 'int main()':
main.cpp:11:28: error: taking address of temporary array
     asdf((int[]){ 1, 2, 3 });
                            ^
1
