Archive2/a6/1620a031f184a4/main.cpp
#include <iostream>

struct asdf {
    asdf(int things[3]) {
        std::cout << things[0];
    }
};

int main()
{
    asdf((int[]){ 1, 2, 3 });
   
    return 1;
}